--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -22,11 +22,8 @@
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
   </head>
   <body>
-    <div class="container">
-      <header class="main-header">
-        <h1 class="main-title">The pointing gentlemen</h1>
-      </header>
-      <section class="controls">
+    <div id="root" class="container">
+      <!-- <section class="controls">
         <p class="info">0 gentlemen pointing at you</p>
         <button class="button button--select">Select all</button>
       </section>
@@ -121,7 +118,7 @@
             ></i>
           </li>
         </ul>
-      </main>
+      </main> -->
     </div>
   </body>
 </html>
